--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
     text-align: center;
-    background-color: lightslategray;
+    background-color: rgb(1, 58, 0);
 }
 div.container {
     text-align: center;
