--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
     text-align: center;
-    background-color: lightslategray;
+    background-color: rgb(0, 0, 0);
 }
 div.container {
     text-align: center;
@@ -12,7 +12,7 @@ div.container {
     text-align: left;
     list-style-type:none;
     width: 300px;
-    color: black;
+    color: rgb(255, 255, 255);
     cursor: pointer;
   }
   #trash:hover{
